--- a/ivy/ivy.xml
+++ b/ivy/ivy.xml
@@ -23,24 +23,24 @@
 			database etc.
 		</description>
 	</info>
-
+	
 	<configurations>
 		<include file="${basedir}/ivy/ivy-configurations.xml" />
 	</configurations>
-
+	
 	<publications>
 		<!--get the artifact from our module name -->
 		<artifact conf="master" />
 	</publications>
-
+	
 	<dependencies>
 		<dependency org="org.slf4j" name="slf4j-api" rev="1.6.1"
 			conf="*->master" />
 		<dependency org="org.slf4j" name="slf4j-log4j12" rev="1.6.1"
 			conf="*->master" />
-
+		
 		<dependency org="log4j" name="log4j" rev="1.2.15" conf="*->master" />
-
+		
 		<dependency org="commons-lang" name="commons-lang" rev="2.6"
 			conf="*->default" />
 		<dependency org="commons-collections" name="commons-collections"
@@ -49,7 +49,7 @@
 			rev="3.1" conf="*->master" />
 		<dependency org="commons-codec" name="commons-codec" rev="1.3"
 			conf="*->default" />
-
+		
 		<dependency org="org.apache.hadoop" name="hadoop-core" rev="1.2.0"
 			conf="*->default">
 			<exclude org="hsqldb" name="hsqldb" />
@@ -59,39 +59,47 @@
 			<exclude org="org.mortbay.jetty" name="jsp-*" />
 			<exclude org="ant" name="ant" />
 		</dependency>
-
+		
 		<dependency org="org.apache.tika" name="tika-core" rev="1.6" />
 		<dependency org="com.ibm.icu" name="icu4j" rev="4.0.1" />
-
+		
 		<dependency org="xerces" name="xercesImpl" rev="2.9.1" />
 		<dependency org="xerces" name="xmlParserAPIs" rev="2.6.2" />
 		<dependency org="oro" name="oro" rev="2.0.8" />
-
+		
 		<dependency org="com.google.guava" name="guava" rev="11.0.2" />
 		<dependency org="com.google.code.crawler-commons" name="crawler-commons"
 			rev="0.5" />
-
+		
+		<!-- begin selenium dependencies -->
+		<dependency org="org.seleniumhq.selenium" name="selenium-java" rev="2.44.0" />
+		
+		<dependency org="com.opera" name="operadriver" rev="1.5">
+			<exclude org="org.seleniumhq.selenium" name="selenium-remote-driver" />
+		</dependency>
+		<!-- end selenium dependencies -->
+		
 		<!--Configuration: test -->
-
+		
 		<!--artifacts needed for testing -->
 		<dependency org="junit" name="junit" rev="4.11" conf="test->default" />
-
+		
 		<dependency org="org.apache.hadoop" name="hadoop-test" rev="1.2.0"
 			conf="test->default" />
-
+		
 		<dependency org="org.mortbay.jetty" name="jetty-client"
 			rev="6.1.22" conf="test->default" />
-
+		
 		<dependency org="org.mortbay.jetty" name="jetty" rev="6.1.22"
 			conf="test->default" />
 		<dependency org="org.mortbay.jetty" name="jetty-util" rev="6.1.22"
 			conf="test->default" />
-
+		
 		<!--global exclusion -->
 		<exclude module="jmxtools" />
 		<exclude module="jms" />
 		<exclude module="jmxri" />
-
+		
 	</dependencies>
-
+	
 </ivy-module>
