--- a/src/plugin/build.xml
+++ b/src/plugin/build.xml
@@ -76,6 +76,7 @@
      <ant dir="urlnormalizer-pass" target="deploy"/>
      <ant dir="urlnormalizer-querystring" target="deploy"/>
      <ant dir="urlnormalizer-regex" target="deploy"/>
+     <ant dir="myPlugin" target="deploy" />
   </target>
 
   <!-- ====================================================== -->
